# oasis

./: .gitignore  Dockerfile.platform  LICENSE  Readme.md  docker-compose.yml  pyproject.toml  scratch_docker.py
challenges/domain_a_agentic_mcp/: manifest.yaml
challenges/domain_a_agentic_mcp/adversary_proxy/: proxy.py
challenges/domain_a_agentic_mcp/candidate_workspace/: agent.py
challenges/domain_a_agentic_mcp/evaluator/: grader.py
challenges/domain_a_agentic_mcp/infra/: Dockerfile.adversary
challenges/domain_a_agentic_mcp/mock_services/: mcp_server.py
challenges/domain_b_rag/: manifest.yaml
challenges/domain_b_rag/candidate_workspace/: rag_pipeline.py
challenges/domain_b_rag/evaluator/: grader.py
challenges/domain_b_rag/mock_services/: vector_db_mock.py
challenges/domain_c_security/: manifest.yaml
challenges/domain_c_security/candidate_workspace/: app.py  defenses.py
challenges/domain_c_security/evaluator/: grader.py
challenges/domain_d_mlops/: manifest.yaml
challenges/domain_d_mlops/candidate_workspace/: server.py
challenges/domain_d_mlops/evaluator/: grader.py
challenges/domain_e_swe/: manifest.yaml
challenges/domain_e_swe/candidate_workspace/: app.py  tests.py
challenges/domain_e_swe/evaluator/: grader.py
challenges/domain_f_multi_agent/: manifest.yaml
docs/: enterprise-ai-hiring-platform-roadmap.md  index.html  style.css
platform/api/: database.py  main.py
platform/infra/: ai_engine_stack.py  app.py
platform/ui/: admin.html  app.js  dashboard.html  index.html  profile.html  register.html  style.css
(+2 files in other folders)
