[project]
name = "ai-engine"
version = "0.1.0"
description = "An open-source, AI-driven technical assessment platform."
authors = [{name = "Antigravity", email = "antigravity@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "docker==7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
